# evalbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  flake.nix  ideia.md  pyproject.toml  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/pyenclave/: api.py  cli.py  policy.py
bindings/python/src/: convert.rs  error.rs  lib.rs
bindings/python/tests/: test_python_api.py
crates/evalbox/: CHANGELOG.md  Cargo.toml
crates/evalbox-sandbox/: CHANGELOG.md  Cargo.toml  build.rs
crates/evalbox-sandbox/src/: executor.rs  lib.rs  monitor.rs  plan.rs  resolve.rs  sysinfo.rs  validate.rs  workspace.rs
crates/evalbox-sandbox/src/isolation/: lockdown.rs  mod.rs  namespace.rs  rlimits.rs  rootfs.rs
crates/evalbox-sandbox/src/notify/: mod.rs  scm_rights.rs  supervisor.rs  virtual_fs.rs
crates/evalbox-sandbox/tests/: security_tests.rs
crates/evalbox-sandbox/tests/common/: mod.rs
crates/evalbox-sandbox/tests/payloads/: cve_2017_5226_tiocsti.c  cve_2019_10063_ioctl_bypass.c  cve_2022_0185_fsconfig.c  cve_2022_0492_cgroups.c  cve_2024_1086_nftables.c  fileless_memfd.c  fork_bomb.c  ioctl_tioclinux.c  ioctl_tiocsetd.c  ptrace_escape.c  socket_netlink.c  socket_raw.c  success.c  syscall_bpf.c  syscall_clone_ns.c  syscall_keyctl.c  syscall_mount.c  syscall_ptrace.c  syscall_reboot.c  userns_escape.c
crates/evalbox-sandbox/tests/security/: cve.rs  filesystem.rs  network.rs  resources.rs  seccomp.rs
crates/evalbox-sys/: CHANGELOG.md  Cargo.toml
crates/evalbox-sys/src/: check.rs  landlock.rs  lib.rs  seccomp.rs  seccomp_notify.rs
crates/evalbox/examples/: full_test.rs
crates/evalbox/src/: detect.rs  error.rs  lib.rs  output.rs  probe.rs  probe_cache.rs  session.rs
crates/evalbox/src/go/: builder.rs  mod.rs  wrap.rs
crates/evalbox/src/python/: builder.rs  elf.rs  ldcache.rs  mod.rs
crates/evalbox/src/shell/: builder.rs  mod.rs
crates/evalbox/tests/: integration.rs
crates/leeward-cli/src/: main.rs
crates/leeward-core/: Cargo.toml
crates/leeward-core/src/: config.rs  lib.rs  worker.rs
crates/leeward-core/src/isolation/: cgroups.rs  mod.rs  seccomp.rs
crates/leeward-daemon/: Cargo.toml
crates/leeward-daemon/src/: config.rs  main.rs  protocol.rs  server.rs
crates/leeward-ffi/src/: lib.rs
crates/pyenclave-core/: Cargo.toml
crates/pyenclave-core/src/: errors.rs  exec.rs  fs.rs  lib.rs  limits.rs  ns.rs  preflight.rs  spec.rs  telemetry.rs
crates/pyenclave-core/src/policy/: landlock.rs  mod.rs  seccomp.rs
crates/pyenclave-core/tests/: test_exec.rs  test_filesystem.rs  test_integration.rs  test_landlock.rs  test_limits.rs  test_namespace.rs  test_preflight.rs  test_seccomp.rs  test_security.rs  test_telemetry.rs
crates/pyenclave-sandbox/: Cargo.toml
crates/pyenclave-sandbox/src/: error.rs  lib.rs  probe.rs  runtime.rs  types.rs
crates/pyenclave-sandbox/src/execution/: limits.rs  mod.rs  process.rs  telemetry.rs
crates/pyenclave-sandbox/src/isolation/: filesystem.rs  mod.rs  namespaces.rs  security.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SECURITY.md  SECURITY_MODEL.md  install.md
nix/: devshell.nix  module.nix  packages.nix  toolchain.nix
pyenclave/: __init__.py  api.py  cli.py  env.py  exceptions.py  mounts.py  policy.py  probe.py  result.py
tests/: conftest.py  test_python_api.py  test_security.py  test_security_e2e.py  test_smoke.py
