# Workspace root for pyenclave project
[workspace]
members = [
    "crates/pyenclave-core",
    "crates/pyenclave-sandbox",
    "bindings/python",
]
resolver = "2"

# Dependências compartilhadas entre crates
[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "1.0"

# System/OS
nix = { version = "0.28", default-features = false, features = ["process", "mount", "fs", "signal", "ucontext", "feature", "sched", "resource", "poll", "socket", "ptrace"] }
rustix = "0.38"
libc = "0.2"

# Security policies
prctl = "1.0"
seccompiler = "0.4"
landlock = "0.4"

# PyO3 (para bindings)
pyo3 = { version = "0.21", features = ["abi3-py38", "extension-module"] }

# Logging (opcional)
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true
