[workspace]
resolver = "3"
members = [
    "crates/evalbox",
    "crates/evalbox-sys",
    "crates/evalbox-sandbox",
]

[workspace.metadata.crane]
name = "evalbox"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["fullzer4 <gabrielpelizzaro@gmail.com>"]
repository = "https://github.com/fullzer4/evalbox"
homepage = "https://github.com/fullzer4/evalbox"
readme = "README.md"
keywords = ["sandbox", "isolation", "security", "landlock", "seccomp"]
categories = ["os::linux-apis", "development-tools"]

[workspace.dependencies]
evalbox = { version = "0.1.1", path = "crates/evalbox" }
evalbox-sys = { version = "0.1.1", path = "crates/evalbox-sys" }
evalbox-sandbox = { version = "0.1.1", path = "crates/evalbox-sandbox" }

libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustix = { version = "1", features = ["event", "process", "system", "mount", "fs"] }
thiserror = "2"
tempfile = "3"
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
which = "8"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_imports = "warn"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cloned_instead_of_copied = "warn"
doc_markdown = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
ptr_as_ptr = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
lto = "fat"
codegen-units = 1
