[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "pyenclave"
version = "0.1.0"
description = "Hermetic, multi-version Python runner for untrusted code on Linux (namespaces + seccomp + Landlock)."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Seu Nome", email = "seu@email" }]
license = { text = "MIT OR Apache-2.0" }
dependencies = [
  "packaging>=23",
  "typer>=0.12"
]

[project.urls]
Homepage = "https://example.com/pyenclave"

[tool.maturin]
manifest-path = "crates/pyenclave-core/Cargo.toml"
module-name   = "pyenclave._core"
bindings      = "pyo3"
compatibility = "manylinux2014"

[tool.maturin.sdist]
include = [
    "assets/**",
    "crates/**",
    "pyenclave/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]
