[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "pyenclave"
version = "0.1.0"
description = "Run untrusted Python code safely with native Linux isolation"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "fullzer4" }]
license = { text = "MIT OR Apache-2.0" }
keywords = [
  "security",
  "sandbox",
  "isolation",
  "namespaces",
  "seccomp",
  "landlock",
  "untrusted-code",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "packaging>=23",
  "typer>=0.12",
]

[project.scripts]
pyenclave = "pyenclave.cli:main"

[project.urls]
Homepage = "https://github.com/fullzer4/pyenclave"
Repository = "https://github.com/fullzer4/pyenclave"
Issues = "https://github.com/fullzer4/pyenclave/issues"
Changelog = "https://github.com/fullzer4/pyenclave/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "pytest-timeout>=2.1",
  "ruff>=0.1.0",
]

[tool.maturin]
manifest-path = "crates/pyenclave-core/Cargo.toml"
module-name   = "pyenclave._core"
bindings      = "pyo3"
compatibility = "linux"

[tool.maturin.sdist]
include = [
    "assets/**",
    "crates/**",
    "pyenclave/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_root: marks tests that require root or user namespaces",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pyenclave"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports ok in __init__
"tests/**/*.py" = ["F401", "F811"]  # allow fixtures and test redefinitions
"cli.py" = ["B008"]  # typer uses function calls in defaults

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
