[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "pyenclave"
version = "0.1.0"
description = "Hermetic, multi-version Python runner for untrusted code on Linux (namespaces + seccomp + Landlock)."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Seu Nome", email = "seu@email" }]
license = { text = "MIT OR Apache-2.0" }
dependencies = [
  "packaging>=23",
  "typer>=0.12"
]

[project.urls]
Homepage = "https://example.com/pyenclave"

[tool.maturin]
manifest-path = "Cargo.toml"  # Cargo.toml está na mesma pasta
module-name   = "pyenclave._core"
bindings      = "pyo3"
compatibility = "manylinux2014"
python-source = "pyenclave"  # Python source está em pyenclave/

[tool.maturin.sdist]
include = [
    "src/**",           # Rust source
    "pyenclave/**",     # Python source
    "tests/**",         # Tests
    "Cargo.toml",
    "pyproject.toml",
    "README.md"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "requires_root: marks tests that require root or user namespaces",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["pyenclave"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
