[package]
name = "evalbox-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sandbox orchestration for evalbox"

[dependencies]
evalbox-sys.workspace = true
libc.workspace = true
rustix.workspace = true
tempfile.workspace = true
mio.workspace = true
thiserror.workspace = true
which.workspace = true

[build-dependencies]
cc = "1.2"

[lints]
workspace = true
