[package]
name = "evalbox-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level syscall wrappers for evalbox sandboxing"

[dependencies]
libc.workspace = true
rustix.workspace = true
thiserror.workspace = true

[lints]
workspace = true
