[package]
name = "pyenclave-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyenclave_core"
crate-type = ["cdylib", "rlib"]  # rlib permite testes integration

[dependencies]
# PyO3: extensão Python
pyo3 = { version = "0.21", features = ["abi3-py38", "extension-module"] }

# Syscalls/OS
rustix = "0.38"
nix = { version = "0.28", default-features = false, features = ["process", "mount", "fs", "signal", "ucontext", "feature", "sched", "resource", "poll", "socket", "ptrace"] }
libc = "0.2"

# Políticas (opcionais; escolha crates conforme preferir, ou implementações diretas)
prctl = "1.0"                 # PR_SET_NO_NEW_PRIVS, PR_SET_PDEATHSIG, etc.
seccompiler = "0.4"           # BPF seccomp filters
landlock = "0.4"              # Landlock filesystem access control
# cgroups-rs = "0.3"          # opcional p/ cgroups v2

# Logs (opcional)
log = "0.4"

# Errors
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing
tempfile = "3.8"          # temporary directories/files for tests
serial_test = "3.0"       # run tests serially when needed (namespace conflicts)
assert_cmd = "2.0"        # command line testing
predicates = "3.0"        # assertions for assert_cmd

[features]
# Gate para recursos opcionais
landlock = []
cgroups = []
